# orezy-backend

./: .admin-user-env.example  .dockerignore  .env.example  .gitignore  .hatchet-user-env.example  CHANGELOG.md  Dockerfile  Dockerfile.base  README.md  docker-compose.hatchet-lite.yml  docker-compose.hatchet-local.yml  docker-compose.hatchet.yml  docker-compose.yml  entrypoint.sh  generate-worker-env.sh  main.py  pyproject.toml  streamlit_workflow.py  streamlit_workflow_demo.py
.github.deprecated/workflows/: build.yml
.github/workflows/: build.yml
api/: db.py  main.py  schemas.py
api/routers/: titles.py
app/: Dockerfile  deps.py  logs.py  main.py
app/api/: Dockerfile  Dockerfile.api  authn.py  authz.py  deps.py  setup_db.py  utils.py
app/api/routes/: auth.py  groups.py  integration.py  integration_control.py  models.py  ndk_backend.py  ndk_control.py  ndk_integration.py  titles.py  users.py  utils.py  webapp_backend.py
app/core/: anomalies.py  crop_model.py  rotate_hough.py  rotate_model.py  utils.py
app/core/rotate_net/: dataset.py  network.py  rotate_model.py
app/core/yolo_crop/: crop_model.py
app/db/: operations.py  schemas.py
app/db/operations/: api.py  hatchet.py
app/db/schemas/: base.py  group.py  title.py  user.py  workflow.py
app/tasks/: Dockerfile  Dockerfile.worker  hatchet_client.py  worker.py
app/tasks/workflows/: maintenance.py  smartcrop_workflow.py  workflow_mongo.py
deploy/: .admin-user-env.example  .env.example  README.md  docker-compose.hatchet-lite.yml  docker-compose.yml  generate-worker-env.sh  setup-integration-env.sh
models/: rotate-300e-best.pth  rotate-net-finetune.pth  rotate-resnet-200e-best.pth
tests/: integration_api_e2e.py  test_anomalies.py  test_api_utils.py  test_core_utils.py
tests/integration/: group_management.py  ndk.py
