[project]
name = "orezy-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "hatchet>=1.4.0",
    "hatchet-sdk>=1.18.1",
    "opencv-contrib-python>=4.12.0.88",
    "pydantic>=2.11.9",
    "pymongo>=4.15.1",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.201",
]
