[project]
name = "cropilot"
version = "1.0.1"
description = "Crop images using AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "hatchet>=1.4.0",
    "hatchet-sdk<=1.18.1",
    "opencv-contrib-python>=4.12.0.88",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.11.9",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.1",
    "slowapi>=0.1.9",
    "streamlit>=1.50.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "ultralytics<=8.4.14",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[dependency-groups]
test = [
    "httpx>=0.28.1",
    "pillow>=11.3.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
